--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -481,7 +481,7 @@
   "SnapshotUpdateNote": "V2.0.1 - 09/01/19 - Added custom color options",
   
   "TileMasterParentVersion": "v2.0.5",
-  "TileMasterChild1Version": "v2.1.1",
+  "TileMasterChild1Version": "v2.1.2",
   "TileMasterChild1Name": "",
   "TileMasterChild2Version": "",
   "TileMasterChild2Name": "",
@@ -495,7 +495,7 @@
   "TileMasterChild3RawCode": "",
   "TileMasterChild4RawCode": "",
   "TileMasterDiscussion": "https://community.hubitat.com/t/release-tile-master-create-a-tile-with-multiple-devices-and-customization-options/23140",
-  "TileMasterUpdateNote": "V2.0.5 - 11/04/19 - Fixed some typo's in the color options, thanks scubamikejax904!",
+  "TileMasterUpdateNote": "V2.1.2 - 12/03/19 - Attempt to fix color overwriting the value",
   
   "WebPingerParentVersion": "v2.0.0",
   "WebPingerChild1Version": "v2.0.2",
