--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -274,7 +274,7 @@
   "Life360TrackerChild3RawCode": "",
   "Life360TrackerChild4RawCode": "",
   "Life360TrackerDiscussion": "https://community.hubitat.com/t/release-life360-tracker-works-with-the-paid-and-free-versions-of-life360/18276",
-  "Life360TrackerUpdateNote": "VV2.0.5 - 12/10/19 - Minor bug fixes",
+  "Life360TrackerUpdateNote": "V2.0.5 - 12/10/19 - Minor bug fixes",
   
   "Life360withStatesParentVersion": "v2.0.0",
   "Life360withStatesChild1Version": "",
