--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -2,7 +2,7 @@
   "GitHubAuthor": "BPTWorld",
   "GitHubMainURL": "https://github.com/bptworld/Hubitat",
   "PaypalLink": "https://paypal.me/bptworld",
-  "Apps": "Abacus Intense Counting, Abacus Time Traveler, App Watchdog 2, At Home Simulator, BI Control, CATT Director, Chromecast Helper, Device Check Plus, Device Sequencer, Device Watchdog, Follow Me, Fully Kiosk Director, Gentle Wake Up, Home Tracker, Hub Watchdog, Life360 Tracker, Life360 with States, Lighting Effects, Magic Cube, Motion Controlled Scene Lighting, Notifier Plus, One at a Time, Room Director, Send IP2IR, Simple Dates, Simple Device Timer, Simple Irrigation, Simple Reminders, Tile Master, Snapshot, Web Pinger",
+  "Apps": "Abacus Intense Counting, Abacus Time Traveler, App Watchdog 2, At Home Simulator, BI Control, CATT Director, Chromecast Helper, Device Check Plus, Device Sequencer, Device Watchdog, Follow Me, Fully Kiosk Director, Gentle Wake Up, Home Tracker, Hub Watchdog, Life360 Tracker, Life360 with States, Lighting Effects, Magic Cube, Motion Controlled Scene Lighting, Notifier Plus, One at a Time, Room Director, Send IP2IR, Simple Dates, Simple Device Timer, Simple Irrigation, Simple Reminders, The Flasher, Tile Master, Snapshot, Web Pinger",
   
   "AbacusIntenseCountingParentVersion": "v2.0.0",
   "AbacusIntenseCountingChild1Version": "v2.0.0",
@@ -496,6 +496,23 @@
   "SnapshotChild4RawCode": "",
   "SnapshotDiscussion": "https://community.hubitat.com/t/release-snapshot/12042",
   "SnapshotUpdateNote": "V2.0.1 - 09/01/19 - Added custom color options",
+  
+  "TheFlasherParentVersion": "v1.0.0",
+  "TheFlasherChild1Version": "v1.0.0",
+  "TheFlasherChild1Name": "",
+  "TheFlasherChild2Version": "",
+  "TheFlasherChild2Name": "",
+  "TheFlasherChild3Version": "",
+  "TheFlasherChild3Name": "",
+  "TheFlasherChild4Version": "",
+  "TheFlasherChild4Name": "",
+  "TheFlasherParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/The%20Flasher/TF-parent.groovy",
+  "TheFlasherChild1RawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/The%20Flasher/TF-child.groovy",
+  "TheFlasherChild2RawCode": "",
+  "TheFlasherChild3RawCode": "",
+  "TheFlasherChild4RawCode": "",
+  "TheFlasherDiscussion": "",
+  "TheFlasherUpdateNote": "V1.0.0 - 01/01/20 - Initial release.",
   
   "TileMasterParentVersion": "v2.0.5",
   "TileMasterChild1Version": "v2.1.2",
