--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -511,7 +511,7 @@
   "TheFlasherChild2RawCode": "",
   "TheFlasherChild3RawCode": "",
   "TheFlasherChild4RawCode": "",
-  "TheFlasherDiscussion": "",
+  "TheFlasherDiscussion": "https://community.hubitat.com/t/release-the-flasher-flash-your-lights-based-on-several-triggers/30843",
   "TheFlasherUpdateNote": "V1.0.0 - 01/01/20 - Initial release.",
   
   "TileMasterParentVersion": "v2.0.5",
