--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -225,7 +225,7 @@
   "GentleWakeUpDiscussion": "https://community.hubitat.com/t/port-gentle-wake-up/19971",
   "GentleWakeUpUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
   
-  "HomeTrackerParentVersion": "v2.2.2",
+  "HomeTrackerParentVersion": "v2.2.3",
   "HomeTrackerChild1Version": "v2.2.3",
   "HomeTrackerChild1Name": "",
   "HomeTrackerChild2Version": "",
@@ -240,7 +240,7 @@
   "HomeTrackerChild3RawCode": "",
   "HomeTrackerChild4RawCode": "",
   "HomeTrackerDiscussion": "https://community.hubitat.com/t/release-home-tracker-track-the-coming-and-going-of-house-members-with-announcements-and-push-messages/22709",
-  "HomeTrackerUpdateNote": "V2.2.2 - 01/11/20 - Fix for locks",
+  "HomeTrackerUpdateNote": "V2.2.3 - 01/11/20 - Fixed sensors from jumping around unless adding/removing",
   
   "HubWatchdogParentVersion": "V1.0.1",
   "HubWatchdogChild1Version": "V1.0.7",
