--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -226,7 +226,7 @@
   "GentleWakeUpUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
   
   "HomeTrackerParentVersion": "v2.2.3",
-  "HomeTrackerChild1Version": "v2.2.7",
+  "HomeTrackerChild1Version": "v2.2.8",
   "HomeTrackerChild1Name": "",
   "HomeTrackerChild2Version": "",
   "HomeTrackerChild2Name": "",
@@ -240,7 +240,7 @@
   "HomeTrackerChild3RawCode": "",
   "HomeTrackerChild4RawCode": "",
   "HomeTrackerDiscussion": "https://community.hubitat.com/t/release-home-tracker-track-the-coming-and-going-of-house-members-with-announcements-and-push-messages/22709",
-  "HomeTrackerUpdateNote": "V2.2.7 - 01/11/20 - Trying to fix a problem with nameCount",
+  "HomeTrackerUpdateNote": "V2.2.8 - 01/14/20 - Tweaks to see who's home for announcements",
   
   "HubWatchdogParentVersion": "V1.0.1",
   "HubWatchdogChild1Version": "V1.0.7",
