--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -481,7 +481,7 @@
   "SimpleIrrigationUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
   
   "SimpleRemindersParentVersion": "v1.0.0",
-  "SimpleRemindersChild1Version": "v1.0.2",
+  "SimpleRemindersChild1Version": "v1.0.3",
   "SimpleRemindersChild1Name": "",
   "SimpleRemindersChild2Version": "",
   "SimpleRemindersChild2Name": "",
@@ -495,7 +495,7 @@
   "SimpleRemindersChild3RawCode": "",
   "SimpleRemindersChild4RawCode": "",
   "SimpleRemindersDiscussion": "",
-  "SimpleRemindersUpdateNote": "V1.0.2 - 12/08/19 - Fixed push messages",
+  "SimpleRemindersUpdateNote": "V1.0.3 - 01/29/20 - Attempt to fix flashing",
   
   "SnapshotParentVersion": "v2.0.0",
   "SnapshotChild1Version": "v2.0.1",
