--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -531,22 +531,22 @@
   "TheFlasherDiscussion": "https://community.hubitat.com/t/release-the-flasher-flash-your-lights-based-on-several-triggers/30843",
   "TheFlasherUpdateNote": "V1.0.4 - 01/12/20 - Add Mode restriction",
   
-  "TileMasterParentVersion": "v2.0.6",
-  "TileMasterChild1Version": "v2.1.5",
-  "TileMasterChild1Name": "",
-  "TileMasterChild2Version": "",
-  "TileMasterChild2Name": "",
-  "TileMasterChild3Version": "",
-  "TileMasterChild3Name": "",
-  "TileMasterChild4Version": "",
-  "TileMasterChild4Name": "",
-  "TileMasterParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Tile%20Master/TM-Parent.groovy",
-  "TileMasterChild1RawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Tile%20Master/TM-Child.groovy",
-  "TileMasterChild2RawCode": "",
-  "TileMasterChild3RawCode": "",
-  "TileMasterChild4RawCode": "",
-  "TileMasterDiscussion": "https://community.hubitat.com/t/release-tile-master-create-a-tile-with-multiple-devices-and-customization-options/23140",
-  "TileMasterUpdateNote": "V2.1.5 - 02/05/20 - Support Smoke/CO decectors (clear-detected) by @LostJen. Thanks!",
+  "TileMaster2ParentVersion": "v2.0.7",
+  "TileMaster2Child1Version": "v2.1.6",
+  "TileMaster2Child1Name": "",
+  "TileMaster2Child2Version": "",
+  "TileMaster2Child2Name": "",
+  "TileMaster2Child3Version": "",
+  "TileMaster2Child3Name": "",
+  "TileMaster2Child4Version": "",
+  "TileMaster2Child4Name": "",
+  "TileMaster2ParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Tile%20Master/TM2-parent.groovy",
+  "TileMaster2Child1RawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Tile%20Master/TM2-child.groovy",
+  "TileMaster2Child2RawCode": "",
+  "TileMaster2Child3RawCode": "",
+  "TileMaster2Child4RawCode": "",
+  "TileMaster2Discussion": "https://community.hubitat.com/t/release-tile-master-create-a-tile-with-multiple-devices-and-customization-options/23140",
+  "TileMaster2UpdateNote": "V2.1.6 - 02/11/20 - BIG changes - Streamlined code, reduced by over 1000 lines! (Wow!)",
   
   "WebPingerParentVersion": "v2.0.0",
   "WebPingerChild1Version": "v2.0.2",
