--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -546,7 +546,7 @@
   "TileMaster2Child3RawCode": "",
   "TileMaster2Child4RawCode": "",
   "TileMaster2Discussion": "https://community.hubitat.com/t/release-tile-master-create-a-tile-with-multiple-devices-and-customization-options/23140",
-  "TileMaster2UpdateNote": "V2.2.6 - 02/28/20 - More work on att values and a few other adjustments,
+  "TileMaster2UpdateNote": "V2.2.6 - 02/28/20 - More work on att values and a few other adjustments",
   
   "WebPingerParentVersion": "v2.0.0",
   "WebPingerChild1Version": "v2.0.2",
