--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -532,7 +532,7 @@
   "TheFlasherUpdateNote": "V1.0.4 - 01/12/20 - Add Mode restriction",
   
   "TileMaster2ParentVersion": "v2.1.1",
-  "TileMaster2Child1Version": "v2.3.1",
+  "TileMaster2Child1Version": "v2.3.2",
   "TileMaster2Child1Name": "",
   "TileMaster2Child2Version": "",
   "TileMaster2Child2Name": "",
@@ -546,7 +546,7 @@
   "TileMaster2Child3RawCode": "",
   "TileMaster2Child4RawCode": "",
   "TileMaster2Discussion": "https://community.hubitat.com/t/release-tile-master-create-a-tile-with-multiple-devices-and-customization-options/23140",
-  "TileMaster2UpdateNote": "V2.3.1 - 03/06/20 - Fixed icons, now use ANY attribute with icons!",
+  "TileMaster2UpdateNote": "V2.3.2 - 03/07/20 - Missed two lines of code that displayed in the log, heads exploded.",
   
   "WebPingerParentVersion": "v2.0.0",
   "WebPingerChild1Version": "v2.0.2",
