--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -531,8 +531,8 @@
   "TheFlasherDiscussion": "https://community.hubitat.com/t/release-the-flasher-flash-your-lights-based-on-several-triggers/30843",
   "TheFlasherUpdateNote": "V1.0.4 - 01/12/20 - Add Mode restriction",
   
-  "TileMaster2ParentVersion": "v2.1.1",
-  "TileMaster2Child1Version": "v2.3.3",
+  "TileMaster2ParentVersion": "v2.1.2",
+  "TileMaster2Child1Version": "v2.3.4",
   "TileMaster2Child1Name": "",
   "TileMaster2Child2Version": "",
   "TileMaster2Child2Name": "",
@@ -546,7 +546,7 @@
   "TileMaster2Child3RawCode": "",
   "TileMaster2Child4RawCode": "",
   "TileMaster2Discussion": "https://community.hubitat.com/t/release-tile-master-create-a-tile-with-multiple-devices-and-customization-options/23140",
-  "TileMaster2UpdateNote": "V2.3.3 - 03/09/20 - Lots of behind the scenes work. Some bug fixes",
+  "TileMaster2UpdateNote": "V2.3.4 - 03/14/20 - Tons of changes (again)",
   
   "WebPingerParentVersion": "v2.0.0",
   "WebPingerChild1Version": "v2.0.2",
